--- a/roles/dotfiles/templates/bash.bashrc.j2
+++ b/roles/dotfiles/templates/bash.bashrc.j2
@@ -1,5 +1,5 @@
 # /etc/bashrc
-{{ ansible_managed | comment }}
+{{ ansible_managed | ansible.builtin.comment }}
 
 # System wide functions and aliases
 # Environment stuff goes in /etc/profile
@@ -41,13 +41,13 @@ fi
 HISTCONTROL={{ l3d_users__dotfiles__history_control }}
 shopt -s histappend
 {% if ansible_os_family == 'Redhat' %}
-# HISTSIZE={{ dotfiles__history_size }}
-# HISTFILESIZE={{ dotfiles__history_file_size }}
+# HISTSIZE={{ l3d_users__dotfiles__history_size }}
+# HISTFILESIZE={{ l3d_users__dotfiles__history_file_size }}
 {% elif ansible_distribution == "CentOS" %}
-# HISTSIZE={{ dotfiles__history_size }}
-# HISTFILESIZE={{ dotfiles__history_file_size }}
+# HISTSIZE={{ l3d_users__dotfiles__history_size }}
+# HISTFILESIZE={{ l3d_users__dotfiles__history_file_size }}
 {% else %}
-HISTSIZE={{ dotfiles__history_size }}
-HISTFILESIZE={{ dotfiles__history_file_size }}
+HISTSIZE={{ l3d_users__dotfiles__history_size }}
+HISTFILESIZE={{ l3d_users__dotfiles__history_file_size }}
 {% endif %}
 # vim:ts=4:sw=4
